--------
v1.0-git
--------

[mjr] Load in 64 bit native mode.
[mjr] initial CHANGES file creation